--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Begin MARTY M -->
+              <!-- Begin MARTY MCFLY -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <img width="304" height="304" class="prof-image" src="img/students/avatar.jpg" class="attachment-blog-thumb wp-post-image">
@@ -110,7 +110,7 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Profile -->
+              <!-- End MARTY MCFLY -->
 
               <!-- Begin Profile -->
               <li class="home-blog-post">
